# clipboardNest

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-desktop-bundles.yml  ci.yml  release.yml
core/: Cargo.toml
core/migrations/: 001_initial.sql  003_updated_at_index.sql
core/src/clipboard/: file_store.rs  hasher.rs  image_store.rs  mod.rs  parser.rs
core/src/storage/: database.rs  models.rs  repository.rs
docs/: 2026-05-30-code-review-issues.md  macos-signing-guide.md  requirements-desktop-remaining.md
docs/plans/: 2026-06-05-file-copy-support.md
scripts/: build-windows.mjs
src/: App.tsx  index.css
src-mobile/: .eslintrc.json  index.html  package-lock.json  package.json
src-mobile-tauri/: Cargo.toml  tauri  tauri.conf.json
src-mobile-tauri/capabilities/: default.json
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/: Cargo.toml  build.rs  tauri.conf.json
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/android/: build.gradle.kts  proguard-rules.pro
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/android/src/main/java/com/clipboard/plugin/: ClipboardMonitorPlugin.kt
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/ios/: Package.swift
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/ios/Sources/: SwiftPlugin.swift
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/permissions/: default.toml
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/permissions/autogenerated/: reference.md
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/permissions/autogenerated/commands/: set_image.toml  set_text.toml  start_monitoring.toml  stop_monitoring.toml  update_clipboard_content.toml
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/permissions/schemas/: schema.json
src-mobile-tauri/plugins/tauri-plugin-clipboard-monitor/src/: lib.rs
src-mobile-tauri/src/: clipboard_monitor.rs  lib.rs  main.rs
src-mobile-tauri/src/commands/: clipboard.rs  mod.rs  settings.rs  sync.rs
src-mobile-tauri/src/sync/: client.rs  discovery.rs  mod.rs  server.rs
src-mobile/src/: App.tsx  i18n.ts  index.css
src-mobile/src/hooks/: useAppState.ts  useClipboard.ts  useClipboardRefresh.ts  useTheme.ts  useTranslation.ts
src-mobile/src/locales/: en.json  zh.json
src-mobile/src/stores/: clipboardStore.ts  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_fts5.sql
src-tauri/resources/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  native_macos.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  settings.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/hooks/: useClipboard.ts  useClipboardRefresh.ts  useDebounce.ts  useKeyboard.ts  useWindowControls.ts
src/stores/: clipboardStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: tauri.ts
(+25 files in other folders)
