[workspace]
members = ["core", "src-tauri", "src-mobile-tauri"]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
sha2 = "0.10"
base64 = "0.22"
tempfile = "3"
thiserror = "1"
