[package]
name = "clipboard-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
image.workspace = true
uuid.workspace = true
log.workspace = true
sha2.workspace = true
base64.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
