[package]
name = "clipboard-manager-mobile"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "clipboard_manager_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clipboard-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
base64.workspace = true
image.workspace = true

# 移动端剪切板监控插件
tauri-plugin-clipboard-monitor = { path = "plugins/tauri-plugin-clipboard-monitor" }

# 同步相关依赖
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
