[package]
name = "clipboard-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clipboard-core = { path = "../core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
arboard = "3"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
image.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["full"] }
log.workspace = true
env_logger = "0.11"
base64.workspace = true
url = "2"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
